# gamecpp

./: .gitignore  CMakeLists.txt  compile_commands.json
include/: Actor.h  Angles.h  AnimSpriteComponent.h  BGSpriteComponent.h  Component.h  Game.h  Ship.h  SpriteComponent.h  Vector2.h
src/: Actor.cpp  Actor.h  Angles.h  AnimSpriteComponent.cpp  AnimSpriteComponent.h  BGSpriteComponent.cpp  BGSpriteComponent.h  Component.cpp  Game.cpp  Game.h  Ship.cpp  Ship.h  SpriteComponent.cpp  SpriteComponent.h  Vector2.h  main.cpp
